--- a/style.css
+++ b/style.css
@@ -67,6 +67,18 @@ main {
   line-height: 0.6;
 }
 
+.blog-text{
+  padding: 25px 0 0 30px;
+}
+
+.blog-text-heading{
+  padding-bottom: 15px;
+}
+
+.blog-box{
+ padding-top: 50px;
+}
+
 .blog-item{
   padding-bottom: 20px;
   margin-bottom: 20px;
